--- a/custom_properties_appointment/views/calendar_event_views.xml
+++ b/custom_properties_appointment/views/calendar_event_views.xml
@@ -4,7 +4,7 @@
         <field name="model">calendar.event</field>
         <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//page[@name='attendees']" position="after">
+            <xpath expr="//field[@name='partner_ids']" position="after">
                 <page string="Available Properties" name="available_properties">
                     <field name="rental_property_id"/>
                 </page>
