--- a/eboss_agencia_web/views/homepage.xml
+++ b/eboss_agencia_web/views/homepage.xml
@@ -7,30 +7,33 @@
                     Gestión Integral de Viviendas en Alquiler
                 </div>
                 
-                <div class="search-container search-separation">
-                    <form class="search-form">
-                        <div class="form-group select-group">
-                            <label for="provincia">Provincia</label>
-                            <select id="provincia" name="provincia" class="select-input">
-                                <option value="todas">Todas</option>
-                                <option value="provincia1">Provincia 1</option>
-                                <option value="provincia2">Provincia 2</option>
-                                <!-- Añade más opciones -->
-                            </select>
-                        </div>
-                        
-                        <div class="form-group select-group">
-                            <label for="municipio">Municipio</label>
-                            <select id="municipio" name="municipio" class="select-input">
-                                <option value="todos">Todos</option>
-                                <option value="municipio1">Municipio 1</option>
-                                <option value="municipio2">Municipio 2</option>
-                                <!-- Añade más opciones -->
-                            </select>
-                        </div>
-                        
-                        <button type="submit" class="search-button">Buscar</button>
-                    </form>
+                <div class="background-container">
+                    <img src="/eboss_agencia_web/static/src/img/imagen.png" class="background-image" alt="fondo"/>
+                    <div class="search-container search-separation">
+                        <form class="search-form">
+                            <div class="form-group select-group">
+                                <label for="provincia">Provincia</label>
+                                <select id="provincia" name="provincia" class="select-input">
+                                    <option value="todas">Todas</option>
+                                    <option value="provincia1">Provincia 1</option>
+                                    <option value="provincia2">Provincia 2</option>
+                                    <!-- Añade más opciones -->
+                                </select>
+                            </div>
+                            
+                            <div class="form-group select-group">
+                                <label for="municipio">Municipio</label>
+                                <select id="municipio" name="municipio" class="select-input">
+                                    <option value="todos">Todos</option>
+                                    <option value="municipio1">Municipio 1</option>
+                                    <option value="municipio2">Municipio 2</option>
+                                    <!-- Añade más opciones -->
+                                </select>
+                            </div>
+                            
+                            <button type="submit" class="search-button">Buscar</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </xpath>
